# libtmp

./: .gitignore  CMakeLists.txt  climbingstats.cpp  climbingstats.h
.github/workflows/: cmake.yaml  debug-macos.yaml  release-matrix.yaml
cmake/: almaConfig.cmake
src/: alma.cpp
